Updated Roslin's age

--- a/roslin.html
+++ b/roslin.html
@@ -48,7 +48,7 @@
                 Roslin
             </h2>
             <p>
-                I'm Roslin, and I'm nine years old.
+                I'm Roslin, and I'm ten years old.
             </p>
             <p>
                 I like playing <a href="https://minecraft.net/">Minecraft</a>, watching <a href="http://www.imdb.com/title/tt2758770/">Star vs. the Forces of Evil</a> and doing crafts.
