Update GitHub profile link

--- a/ben.html
+++ b/ben.html
@@ -180,7 +180,7 @@
             </a>
 
             <!-- GitHub -->
-            <a href="https://github.com/GuruAnt" title="GitHub">
+            <a href="https://github.com/BenNeise" title="GitHub">
                 <i class="fab fa-github fa-3x fa-fw socialIconAwesome"></i>
             </a>
 
