--- a/ben.html
+++ b/ben.html
@@ -51,7 +51,7 @@
         pintrest("https://query.yahooapis.com/v1/public/yql?q=select%20*%20from%20rss%20where%20url%3D%22http%3A%2F%2Fpinterest.com%2Fguruant%2Ffeed.rss%22&format=json&diagnostics=true&callback=")
 
         // http://ben.neise.co.uk/feed.xml
-        blog("https://query.yahooapis.com/v1/public/yql?q=select%20title%2Clink%20from%20rss%20where%20url%3D'http%3A%2F%2Fben.neise.co.uk%2Ffeed.xml'&format=json&env=store%3A%2F%2Fdatatables.org%2Falltableswithkeys")
+        blog("https://query.yahooapis.com/v1/public/yql?q=select%20entry.title%2Centry.link%20from%20xml%20where%20url%20%3D%20'https%3A%2F%2Fben.neise.co.uk%2Ffeed.xml'&format=json&env=store%3A%2F%2Fdatatables.org%2Falltableswithkeys")
 
         // http://guruant.tumblr.com/rss
         tumblr("https://query.yahooapis.com/v1/public/yql?q=select%20*%20from%20rss%20where%20url%3D%22http%3A%2F%2Fguruant.tumblr.com%2Frss%22&format=json&env=store%3A%2F%2Fdatatables.org%2Falltableswithkeys")
