Removed old socials

--- a/ben.html
+++ b/ben.html
@@ -70,48 +70,49 @@
             </p>
         </div>
 
-        <!-- Pocket -->
+        <!-- Pocket 
         <div class="box" id="pocket" title="See what Ben's been saving to Pocket">
             <a href="http://getpocket.com/users/guruant/feed/read">
                 <i class="fab fa-get-pocket fa-3x"></i>
             </a>
             <div id="contentPocket"></div>
         </div>
+-->
 
-
-        <!-- Flickr -->
+        <!-- Flickr 
         <div class="box clickable" id="flickr" title="Ben's photos on Flickr">
             <a href="http://www.flickr.com/photos/guruant/">
                 <i class="fab fa-flickr fa-3x"></i>
             </a>
             <div id="contentFlickr"></div>
         </div>
+        -->
 
-        <!-- Blog -->
+        <!-- Blog 
         <div class="box" id="wordpress" title="Ben's blog">
             <a href="http://ben.neise.co.uk">
                 <i class="fas fa-cloud fa-3x"></i>
             </a>
             <div id="contentBlog"></div>
         </div>
+-->
 
-
-        <!-- Twitter -->
+        <!-- Twitter 
         <div class="box" id="twitter" title="Ben on Twitter">
             <a href="https://twitter.com/GuruAnt">
                 <i class="fab fa-twitter fa-3x"></i>
             </a>
             <div id="contentTwitter"></div>
         </div>
-
-        <!-- Tumblr -->
+-->
+        <!-- Tumblr 
         <div class="box" id="tumblr" title="Ben on Tumblr">
             <a href="http://guruant.tumblr.com">
                 <i class="fab fa-tumblr fa-3x"></i>
             </a>
             <div id="contentTumblr"></div>
         </div>
-
+-->
         <div class="box" id="other">
             <h2>
                 Other
@@ -127,11 +128,7 @@
                         <i class="fab fa-paypal fa-fw"> </i> Send money via PayPal
                     </a>
                 </li>
-                <li>
-                    <a href="https://bitpay.com/621794/donate">
-                        <i class="fab fa-btc fa-fw"> </i> Send Bitcoins
-                    </a>
-                </li>
+
             </ul>
             <p>&nbsp;</p>
         </div>
@@ -139,16 +136,6 @@
         <!-- Social -->
         <div class="box" id="social" title="Other social networks">
             <h2>Social</h2>
-
-            <!-- Google Plus -->
-            <a href="https://plus.google.com/+BenNeise" title="Google Plus">
-                <i class="fab fa-google-plus-square fa-3x fa-fw socialIconAwesome"></i>
-            </a>
-
-            <!-- Facebook -->
-            <a href="https://www.facebook.com/benneise" title="Facebook">
-                <i class="fab fa-facebook-square fa-3x fa-fw socialIconAwesome"></i>
-            </a>
 
             <!-- XBox Live -->
             <a href="https://live.xbox.com/en-US/Profile?pp=0&GamerTag=GuruAnt" title="XBox Live">
@@ -178,11 +165,6 @@
             <!-- 500px -->
             <a href="https://500px.com/GuruAnt" title="500px">
                 <i class="fab fa-500px fa-3x fa-fw socialIconAwesome"></i>
-            </a>
-
-            <!-- Dropbox Referral -->
-            <a href="https://db.tt/4VXUFRZ" title="Dropbox">
-                <i class="fab fa-dropbox fa-3x fa-fw socialIconAwesome"></i>
             </a>
 
             <p>&nbsp;</p>
